# android_hacking_container

./: .gitignore  .gitmodules  Dockerfile  Readme.md  build.sh  run.sh  source_me.sh
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
devices/poco_m3/: .gitignore  download_tools.sh
devices/poco_m3/aosp/: clone_aosp.sh
devices/poco_m3/binaries/: .gitignore  align_fix.py  build_binaries.sh  download_binaries.sh  upload_binaries.sh
devices/poco_m3/binaries/kexec/: .gitignore  build.sh  download.sh  kexec_command.sh  kexec_command_gz.sh  upload.sh
devices/poco_m3/binaries/nano/: .gitignore  build.sh  download.sh  nano.tar.xz  upload.sh
devices/poco_m3/binaries/strace/: build.sh  download.sh
devices/poco_m3/binaries/texterm/: build.sh  download.sh  upload.sh
devices/poco_m3/kernel/: extra_boot_args.txt  kernel_build.sh  kernel_clone.sh  kernel_download.sh  kernel_extract.sh  kernel_patch.sh
devices/poco_m3/rom/magisk/: readme.md
devices/virtual/: .gitignore  download_tools.sh
devices/virtual/aosp/: clone_aosp.sh
devices/virtual/emu/: clone_emu.sh  emu_build.sh  emu_launch_generic.sh  emu_rebuild.sh
devices/virtual/kernel/: kernel_download.sh
devices/virtual/patches/: genheaders.patch
devices/virtual/rom/: rom_download.sh
magisk/: CMakeLists.txt
magisk_for_linux/: .gitignore  install_magisk.sh  patch_magisk.sh
